test/Fail/AnonymousRecConstrPostulate.agda
module AnonymousRecConstrPostulate where

postulate foo : Set

_ = foo.constructor
