test/Fail/AnonymousRecConstrPostulate.err
AnonymousRecConstrPostulate.agda:5.5-20: error: [ConstructorNameOfNonRecord]
Only record types have constructor names, but foo is a postulate.
when scope checking foo.constructor
